# versionable

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pixi.toml  pyproject.toml  pyrightconfig.minimal.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish.yml
docs/: AGENT.md  ai-agents.md  backends.md  conf.py  contributing.md  faq.md  getting-started.md  index.md  migrations.md  reference.md  skills-user.md  skills.md  types.md
docs/_static/: custom.css
docs/plans/: bootstrap.md  envelope-keys.md  native-hdf5-storage.md  nested-migrations.md  publish-pypi-rtd.md  reference-handling.md  save-as-you-go-hdf5.md  tomlkit-migration.md
examples/: comment_defaults.py  daq_simulator.py  save_as_you_go.ipynb
scripts/: bench_lazy_loading.py
src/versionable/: __init__.py  _api.py  _appendable.py  _backend.py  _base.py  _dataset_array.py  _hash.py  _hdf5_backend.py  _hdf5_compression.py  _hdf5_field.py  _hdf5_plugin.py  _hdf5_session.py  _json_backend.py  _lazy.py  _migration.py  _numpy_compat.py  _toml_backend.py  _tracked_array.py  _types.py  _yaml_backend.py  errors.py  hdf5.py
tests/: conftest.py  test_base.py  test_cross_backend_roundtrip.py  test_cycles.py  test_hash.py  test_hdf5_backend.py  test_hdf5_session.py  test_json_backend.py  test_migration.py  test_nested_envelope_collision.py  test_nested_migrations.py  test_toml_backend.py  test_types.py  test_yaml_backend.py
